added mitigation on CSS

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,9 +16,11 @@
 	background-color: green !important;
 }
 
+/* picked up */
 #aaa {
 
 /*
+	unsetting properies 
 	background-color: green !important;
 	width: unset;
 	max-width:unset;
@@ -26,3 +28,9 @@
 	padding-left: unset;
 */
 }
+
+/* this works but width is lost 
+.row > * {
+	width: unset !important;
+}
+*/
