--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 <h2>with angular</h2>
 <div class="container-fluid text-center">
 	<div class="row myrow">
-		<column [id]="'aaa'"></column>
+		<column-component [id]="'aaa'"></column-component>
 		<div class="row myrow">
 			<div class="col-6 mycol">
 				<div>
