--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,21 +29,22 @@
 <div class="container-fluid text-center">
 	<div class="row myrow">
 		<column-component [id]="'aaa'"></column-component>
-		<div class="row myrow">
-			<div class="col-6 mycol">
-				<div>
-					<img src="/assets/stuff.png" />
+		<div class="col-8">
+			<div class="row myrow">
+				<div class="col-6 mycol">
+					<div>
+						<img src="/assets/stuff.png" />
+					</div>
+					<div>
+						<img src="/assets/stuff.png" />
+					</div>
 				</div>
-				<div>
-					<img src="/assets/stuff.png" />
+				<div class="col-6 mycol">
+					<div>
+						<img src="/assets/stuff.png" />
+					</div>
 				</div>
-
-			</div>
-			<div class="col-6 mycol">
-				<div>
-					<img src="/assets/stuff.png" />
-				</div>
-			</div>
-		</div> <!-- col 8 -->
+			</div> <!-- row -->
+		</div><!-- col 8 -->
 	</div> <!-- row -->
-</div> <!-- container -->
+</div>
